--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div class="doc-gallery">
       <div class="doc-item"><img src="Eksperimen.jpg" alt="Eksperimen"><p>🔬 Laboratorium Mini, Inovasi Maksimal</p></div>
       <div class="doc-item"><img src="Presentasi.jpg" alt="Presentasi"><p>🎤 Presentasi Ide Hebat</p></div>
-      <div class="doc-item"><img src="Suasana.jpeg" alt="Suasana"><p>📚 Belajar = Petualangan Ilmu</p></div>
+      <div class="doc-item"><img src="Suasana.jpg" alt="Suasana"><p>📚 Belajar = Petualangan Ilmu</p></div>
       <div class="doc-item"><img src="BBM.jpg" alt="Boarding with People"><p>🤝 Boarding Bersama Masyarakat</p></div>
       <div class="doc-item"><img src="Workshop.jpg" alt="Workshop"><p>💡 Workshop Inovatif & Gaul</p></div>
       <div class="doc-item"><img src="Fotbar.jpg" alt="Fotbar"><p>📸 Momen Kebersamaan</p></div>
@@ -80,7 +80,7 @@
         <p>Ajang kompetisi sains & teknologi tingkat SMP/MTs se-Jawa & Bali</p>
       </div>
       <div class="mission-card">
-        <img src="mission2.jpeg" alt="Jalan Sehat">
+        <img src="mission2.jpg" alt="Jalan Sehat">
         <h3>Jalan Sehat</h3>
         <p>Kegiatan jalan santai bersama guru, karyawan, dan siswa MAN 1 Surakarta.</p>
       </div>
@@ -104,7 +104,11 @@
     <div class="thumb-strip" id="thumb-strip"></div>
   </div>
 
+  <!-- MORPH TRANSITION -->
+  <svg class="morph-overlay" viewBox="0 0 1440 320" preserveAspectRatio="none">
+    <path d="M0,320 L1440,320 L1440,0 Q720,180 0,0 Z"></path>
+  </svg>
+
   <script src="script.js"></script>
 </body>
 </html>
-
