--- a/index.html
+++ b/index.html
@@ -7,17 +7,6 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Morph Animated Background -->
-  <svg class="morph-bg" viewBox="0 0 1440 320" preserveAspectRatio="none">
-    <defs>
-      <linearGradient id="bgGradient" x1="0%" y1="0%" x2="100%" y2="100%">
-        <stop offset="0%" stop-color="#ff416c" />
-        <stop offset="100%" stop-color="#0072ff" />
-      </linearGradient>
-    </defs>
-    <path d="M0,160L1440,160L1440,320L0,320Z"></path>
-  </svg>
-
   <!-- HEADER -->
   <header>
     <nav>
@@ -42,13 +31,13 @@
   </section>
 
   <!-- VISI -->
-  <section id="visi">
+  <section id="visi" class="fade-in">
     <h2>🌟 Visi</h2>
     <p>Menjadi pusat riset & sains yang melahirkan pemimpin berkelas dunia.</p>
   </section>
 
   <!-- MISI -->
-  <section id="misi">
+  <section id="misi" class="fade-in">
     <h2>🎯 Misi</h2>
     <ul>
       <li>Menghidupkan budaya riset sejak dini</li>
@@ -58,13 +47,13 @@
   </section>
 
   <!-- TENTANG -->
-  <section id="tentang">
+  <section id="tentang" class="fade-in">
     <h2>👥 Tentang Kami</h2>
     <p>X E1 adalah program unggulan Boarding School Sains & Riset MAN 1 Surakarta, menggabungkan akademik, eksperimen, dan pembinaan karakter Islami.</p>
   </section>
 
   <!-- DOKUMENTASI -->
-  <section class="documentation" id="dokumentasi">
+  <section class="documentation fade-in" id="dokumentasi">
     <h2>📸 Dokumentasi</h2>
     <div class="doc-gallery">
       <div class="doc-item"><img src="Eksperimen.jpg" alt="Eksperimen"><p>🔬 Laboratorium Mini, Inovasi Maksimal</p></div>
@@ -77,12 +66,12 @@
   </section>
 
   <!-- QUOTE -->
-  <section class="quote">
+  <section class="quote fade-in">
     <h2>"Ilmu adalah cahaya, dan bersama kita menyalakan dunia."</h2>
   </section>
 
   <!-- AKTIVITAS -->
-  <section class="missions">
+  <section class="missions fade-in">
     <h2>🔥 Aktivitas Terkini</h2>
     <div class="mission-cards">
       <div class="mission-card">
@@ -114,17 +103,6 @@
     <p id="lightbox-caption"></p>
     <div class="thumb-strip" id="thumb-strip"></div>
   </div>
-
-  <!-- MORPH TRANSITION -->
-  <svg class="morph-overlay" viewBox="0 0 1440 320" preserveAspectRatio="none">
-    <defs>
-      <linearGradient id="morphGradient" x1="0%" y1="0%" x2="100%" y2="100%">
-        <stop offset="0%" stop-color="#ff416c" />
-        <stop offset="100%" stop-color="#ff4b2b" />
-      </linearGradient>
-    </defs>
-    <path d="M0,320 L1440,320 L1440,0 Q720,180 0,0 Z"></path>
-  </svg>
 
   <script src="script.js"></script>
 </body>
